Fix: wrapped label and the basic info width (#726)
* fix wrapped label and the basic info width

--- a/components/AccountOverview/styles.module.scss
+++ b/components/AccountOverview/styles.module.scss
@@ -74,3 +74,9 @@
     }
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .info-width {
+    width: calc(50% - 32px);
+  }
+}
